<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World!</string>
    <string name="app_name">Ota Client</string>
    <string name="settingitemdef">无内容</string>
    <string name="onlywlan">仅WLAN</string>
    <string name="onlywlan_desc">仅当通过WLAN连接时可下载</string>
    <string name="push">推送信息</string>
    <string name="push_desc">通过推送服务接收更新信息</string>
    <string name="reminder">轮询更新</string>
    <string name="reminder_desc">通过预定的周期自动查询更新</string>
    
    <string name="reminder_layout_title">请选择轮询周期</string>
    
     <string name="more_settings">应用设置</string>
    <string name="more_localinfo">本机信息</string>
    <string name="more_appupdate">检查更新</string>
    <string name="more_answers">常见问题</string>
    <string name="more_feedback">用户反馈</string>
    <string name="more_about">关于</string>
    
    <string name="updateisnew">您的版本已经为最新，不需要升级！</string>
    <string name="UpdateInfoDownloadError">获取升级信息失败，请检查网络连接或存储卡状态是否正常，然后重试！</string>
    <string name="Thanks">OTA研发小组敬上，感谢您的支持！</string>
    <string name="about_onlineupt_spec">该功能需要设备连接网络，请保持网络畅通。在线升级界面点击"查询"，可以检查您的固件版本是否为最新，如果存在可升级的版本，可依次进行下载、升级。在升级前会进行固件检测，如果验证失败，请谨慎升级。下载的固件包放在"/mnt/sdcard/lenovoota"文件路径下。</string>
	<string name="about_sdcardupt_spec">本地升级界面点击"浏览"并选择ROM包(.zip文件)，然后点击"开始刷机"。在升级前会进行固件检测，如果验证失败，请谨慎升级。</string>
	<string name="about_onlineupt_setting_spec">"更多"->"应用设置"中，可以对在线升级的网络控制、推送新版本、轮询更新进行设置</string>
	<string name="appname">应用名称：</string>
	<string name="appver">当前版本：</string>
	<string name="contact_me">联系我们：dev@otaserver.com</string>
	<string name="about_title">关于</string>
	<string name="settings_title">设置</string>
	<string name="localinfo_title">本机信息</string>
	<string name="feedback_title">用户反馈</string>
	<string name="feedback_edittext_hint">欢迎提出您宝贵的意见，我们会用心倾听并继续改进产品，把更好的体验带给您！</string>
	<string name="familiar_question_title">常见问题</string>
	
	<string name="sdcardupdate_btn_browser">浏览</string>
	<string name="sdcardupdate_btn_update">开始刷机</string>
	<string name="filemanagartitle">ROM管理</string>
	<string name="sdcardupdate_textview_info">点击"浏览"按钮，选择要刷的ROM</string>
	<string name="sdcardupdate_prompt">提示:</string>
	<string name="sdcardupdate_prompt_one">点击浏览选择ROM,然后开始刷机.</string>
	<string name="sdcardupdate_prompt_two">在线升级下载的ROM放在/sdcard/lenovoota路径下.</string>
	<string name="sdcardupdate_prompt_three">刷机前会对ROM进行验证.</string>
	<string name="sdcardupdate_prompt_four">保证电量大于30%.</string>
	
	
	<string name="root_text_advice">root是android的最大权限</string>
	<string name="sdcard_size_text_advice">建议大于500MB</string>
	<string name="battery_text_advice">请保持电量高于30%</string>
	
	<string name="online_btn_check">开始查询</string>
	<string name="online_btn_download">下载</string>
	<string name="online_btn_pause">暂停</string>
	<string name="online_btn_stop">停止</string>
	<string name="online_btn_update">升级</string>
	<string name="online_text_updateinfo">升级信息</string>
</resources>
