<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/more"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/localinfo"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/more_item_height"
        android:layout_margin="10dip"
        android:background="@drawable/bg_more_btn" >
        
        <ImageView
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="10dip"
        	android:layout_gravity="center_vertical"
        	android:src="@drawable/localinfo"
            />
        <TextView 
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="10dip"
        	android:layout_gravity="center_vertical"
        	android:text="@string/more_localinfo"
        	android:textSize="@dimen/more_item_text_size"
        	android:textColor="@android:color/black"
            />

	</LinearLayout>
	
     <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/settings"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/more_item_height"
        android:layout_margin="10dip"
        android:background="@drawable/bg_more_btn" >
        
        <ImageView
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="10dip"
        	android:layout_gravity="center_vertical"
        	android:src="@drawable/settings"
            />
        <TextView 
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="10dip"
        	android:layout_gravity="center_vertical"
        	android:text="@string/more_settings"
        	android:textSize="@dimen/more_item_text_size"
        	android:textColor="@android:color/black"
            />

	</LinearLayout>
	
     <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/feedback"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/more_item_height"
        android:layout_margin="10dip"
        android:background="@drawable/bg_more_btn" >
        
        <ImageView
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="10dip"
        	android:layout_gravity="center_vertical"
        	android:src="@drawable/feedback"
            />
        <TextView 
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="10dip"
        	android:layout_gravity="center_vertical"
        	android:text="@string/more_feedback"
        	android:textSize="@dimen/more_item_text_size"
        	android:textColor="@android:color/black"
            />

	</LinearLayout>
	
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/question"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/more_item_height"
        android:layout_margin="10dip"
        android:background="@drawable/bg_more_btn" >
        
        <ImageView
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="10dip"
        	android:layout_gravity="center_vertical"
        	android:src="@drawable/question"
            />
        <TextView 
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="10dip"
        	android:layout_gravity="center_vertical"
        	android:text="@string/more_answers"
        	android:textSize="@dimen/more_item_text_size"
        	android:textColor="@android:color/black"
            />

	</LinearLayout>
	
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/update"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/more_item_height"
        android:layout_margin="10dip"
        android:background="@drawable/bg_more_btn" >
        
        <ImageView
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="10dip"
        	android:layout_gravity="center_vertical"
        	android:src="@drawable/update"
            />
        <TextView 
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="10dip"
        	android:layout_gravity="center_vertical"
        	android:text="@string/more_appupdate"
        	android:textSize="@dimen/more_item_text_size"
        	android:textColor="@android:color/black"
            />

	</LinearLayout>
	
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/about"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/more_item_height"
        android:layout_margin="10dip"
        android:background="@drawable/bg_more_btn" >
        
        <ImageView
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="10dip"
        	android:layout_gravity="center_vertical"
        	android:src="@drawable/about"
            />
        <TextView 
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="10dip"
        	android:layout_gravity="center_vertical"
        	android:text="@string/more_about"
        	android:textSize="@dimen/more_item_text_size"
        	android:textColor="@android:color/black"
            />

	</LinearLayout>

</LinearLayout>